# Tuxedo Backend Dependencies
# Use with: uv add fastapi uvicorn pydantic python-dotenv langchain-openai stellar-sdk aiohttp certifi

[project]
name = "tuxedo-backend"
version = "0.1.0"
description = "FastAPI backend for Tuxedo AI"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=1.0.1",
    "stellar-sdk[aiohttp]>=13.1.0",
    "aiohttp>=3.8.0",
    "certifi>=2022.12.7",
]
